--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Spoiler</title>
 </head>
 <body>
-    
+    <button>Afficher</button>
+    <div>Le texte caché.</div>
     <script src="app.js"></script>
 </body>
 </html>
